# hermes-agent

./: hermes_state.py  model_tools.py
acp_adapter/: server.py
plugins/hermes-workflows/: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  LLMS.txt  README.md  __init__.py  oxlint.json  package.json  plugin.yaml  pyproject.toml  tsconfig.json
plugins/hermes-workflows/apps/dashboard/: package.json  plugin-version.ts  tsconfig.json  vite.config.ts  vitest.config.ts
plugins/hermes-workflows/dashboard/: manifest.json  plugin_api.py
plugins/hermes-workflows/docs/: architecture.md  dashboard.md  execution.md  o2b-integration.md  workflow-schema.md
plugins/hermes-workflows/docs/plans/: 2026-05-29-hermes-workflows-mvp-plan.md  2026-05-29-phase2-autonomy-plan.md  2026-05-30-editor-backend-plan.md  2026-05-30-editor-polish-plan.md  2026-05-30-runs-page-plan.md  2026-05-30-schedules-page-plan.md  2026-05-30-script-node-plan.md  2026-05-30-settings-page-plan.md  2026-05-30-templates-enhancements-plan.md  2026-05-30-workflow-lifecycle-plan.md  2026-05-30-xyflow-editor-plan.md  2026-05-31-autonomous-loop-plan.md
plugins/hermes-workflows/docs/specs/: 2026-05-29-hermes-workflows-mvp-design.md  2026-05-29-phase2-autonomy-design.md  2026-05-30-editor-backend-design.md  2026-05-30-editor-polish-design.md  2026-05-30-runs-page-design.md  2026-05-30-schedules-page-design.md  2026-05-30-script-node-design.md  2026-05-30-settings-page-design.md  (+5 more)
plugins/hermes-workflows/hermes_workflows/: __init__.py  cli_bridge.py  config.py  dashboard_api.py  plugin.py  redact.py  template_export.py
(+324 files in other folders)
